@@ -1,6 +1,14 @@
 # ChangeLog for media-tv/v4l-dvb-saa716x
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/v4l-dvb-saa716x/ChangeLog,v 1.5 2015/01/03 00:30:18 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/v4l-dvb-saa716x/ChangeLog,v 1.6 2015/02/15 16:26:36 hd_brummy Exp $
+
+*v4l-dvb-saa716x-0.0.1_p20141109 (15 Feb 2015)
+
+  15 Feb 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
+  -v4l-dvb-saa716x-0.0.1_p20130224.ebuild,
+  -v4l-dvb-saa716x-0.0.1_p20130802.ebuild,
+  +v4l-dvb-saa716x-0.0.1_p20141109.ebuild:
+  bump, new snapshot, ebuild provided by M.Dummer, thx; cleanup
 
   03 Jan 2015; Joerg Bornkessel <hd_brummy@gentoo.org>
   v4l-dvb-saa716x-0.0.1_p20140322.ebuild:
